Changes since 0.4.0
- Delete unused functions
- Code cleanup
- 
