@@ -1,4 +1,4 @@
-#Sun Aug 30 05:02:31 CDT 2009
+#Mon Aug 31 17:31:22 CDT 2009
 eclipse.preferences.version=1
 encoding//christinetests/dbustest.py=utf-8
 encoding//extras/rola_christine.py=utf-8
@@ -23,5 +23,6 @@ encoding//libchristine/gui/GtkMisc.py=latin1
 encoding//libchristine/gui/openRemote.py=utf-8
 encoding//libchristine/libs_christine.py=latin1
 encoding//libchristine/options.py=utf-8
+encoding//libchristine/sanity.py=latin1
 encoding//libchristine/sources_list.py=latin1
 encoding//libchristine/ui.py=latin1
