@@ -14,7 +14,6 @@ AC_PATH_X
 AC_HEADER_STDC
 AC_PROG_CC
 AC_HEADER_STDC
-#dnlAC_PYTHON_DEVEL(">= '2.4'")
 
 AM_MAINTAINER_MODE
 AM_PATH_PYTHON(2.4)
