@@ -37,7 +37,7 @@ DATADIR = '@datadir@'
 PREFIX = '@prefix@'
 SYSCONFDIR = '@sysconfdir@'
 if os.environ.has_key('XDG_DATA_HOME'):
-	USERDIR = os.environ['XDG_DATA_HOME']
+	USERDIR  = os.path.join(os.environ['XDG_CONFIG_HOME'],"christine")
 else: 
 	USERDIR  = os.path.join(os.environ["HOME"],".config","christine")
 IMAGEDIR = os.path.join(USERDIR,'cache_images')
@@ -49,15 +49,15 @@ LOGFILE  = os.path.join(USERDIR,"log")
 CHRISTINE_AUDIO_EXT = sound = ["mp3","ogg","wma"]
 CHRISTINE_VIDEO_EXT = video = ["mpg","mpeg","mpe","avi"]
 
-
+from libchristine.options import options
+opts = options()
 # global PATH to share files required
-if "--devel" in sys.argv:
+if opts.options.debug:
 	SHARE_PATH = os.path.join("./")
 	PLUGINSDIR = './libchristine/Plugins'
 else:
 	SHARE_PATH = os.path.join('@datadir@', 'christine')
 	PLUGINSDIR = '@pythonlibdir@/libchristine/Plugins'
-
 GUI_PATH = os.path.join(SHARE_PATH,"gui")
 LOCALE_DIR = "@datadir@/locale/"
 BUGURL='https://apps.sourceforge.net/trac/christine/newticket'
